2024-02-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-reminder.el (howm-simulate-todo):
	implement simulation of todo list for a specific date
	https://github.com/kaorahi/howm/issues/4

	* howm-view.el (howm-view-summary-mode):
	modify mode line for the above simulation

2024-02-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-reminder.el (howm-todo-menu, howm-reminder-menu):
	never omit near-term schedules in menu even with too many overdue deadlines.
	show %tnum entries for %reminder in menu even with too many schedules.

2023-12-31  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* configure.ac: version 1.5.1

2023-12-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* README.md: add link to English tutorial
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-12-15  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* configure.ac: version 1.5.1-snapshot6

	* howm-vars.el (howm-iigrep-show-what):
	change default value from "Off" to "Counts"

2023-12-14  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-misc.el (howm-narrow-to-memo, howm-toggle-narrow):
	add docstrings as a workaround for a possible bug of
	disabled-command-function in emacs-29
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-12-03  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* README.md: add link to YouTube video
	thx > Raoul Comninos san (revcomninos at gmail.com)

2023-07-30  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm.el.in: update author email

2023-07-30  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* README.md: add link to Russian manual
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-07-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.5.1-snapshot5

	* howm-misc.el (howm-remember-submit):
	make the blank line removable after the input text in howm-remember
	thx > Andrei Sukhovskii san (qojop at tuta.io)

	* howm-vars.el (howm-remember-insertion-format):
	ditto

2023-07-01  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* iigrep.el: avoid warning in byte-compilation